# PCombinator

./: .pypirc  README.md  pyproject.toml
.github/workflows/: build-library.yaml  build.yaml
docs/: developing.md  path.md
examples/: example.py
pcombinator/combinators/: __init__.py  combinator.py  fixed_string_combinator.py  jinja2_template.py  join_some_of.py  named_string.py  one_of_combinator.py  pick_one.py  random_join_combinator.py  some_of_combinator.py  template_combinator.py
pcombinator/combinators/tests/: test_combinator.py  test_fixed_string_combinator.py  test_join_some_of.py  test_one_of_combinator.py  test_pick_one.py  test_random_join_combinator.py  test_some_of_combinator.py  test_template_combinator.py
pcombinator/examples/: prompt_atoms.py
pcombinator/persistence/: combinators_file.py  prompt_candidates_file.py
pcombinator/persistence/tests/: test_combinators_file.py
pcombinator/util/: classname.py
src/: choice_utils.py  prompt_candidates_file.py  prompt_combinator.py  templates.py  types.py
src/combinators/: combinator.py  fixed_string_combinator.py  one_of_combinator.py  random_join_combinator.py  template_combinator.py
src/combinators/tests/: test_combinator.py  test_fixed_string_combinator.py  test_one_of_combinator.py  test_random_join_combinator.py  test_template_combinator.py
