[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "build"

[tool.poetry]
name = "LLMPromptComposer"
version = "0.0.1"
description = "A Python package for composing LLM prompts"
authors = ["Roman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
