[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PCombinator"
version = "0.0.1"
description = "A tool for composing variations of prompts"
authors = ["Roman Baron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.extras]
templating = ["jinja2"]
